Add validation and update PayOS cancel handling